--- a/tmux.conf
+++ b/tmux.conf
@@ -7,9 +7,7 @@ bind C-a send-prefix
 set -sg escape-time 0
 set -sg repeat-time 600
 
-# This is hilariously absurd.  How many nerds use tmux on OS X every day and
-# it's still fundamentally broken?
-set -g default-command "reattach-to-user-namespace -l zsh"
+bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Less stretching to get to the first item.
 set -g base-index 1
@@ -41,6 +39,7 @@ bind -r . select-window -t :+
 
 # UI
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 
 # Activity
 setw -g monitor-activity on
@@ -60,23 +59,18 @@ bind [ copy-mode
 unbind p
 bind p paste-buffer
 
-# default statusbar colors
-set-option -g status-bg colour8
-set-option -g status-fg colour33
-set-option -g status-attr default
+# default statusbar colours
+set-option -g status-style fg=colour33,bg=colour8,default
 
-# default window title colors
-set-window-option -g window-status-fg colour33
-set-window-option -g window-status-bg default
+# default window title colours
+set-window-option -g window-status-style fg=colour33,bg=default
 
-# active window title colors
-set-window-option -g window-status-current-fg colour15
-set-window-option -g window-status-current-bg default
+# active window title colours
+set-window-option -g window-status-current-style fg=default,bg=default
 
 # pane border
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour46
+set-option -g pane-border-style fg=colour235
+set-option -g pane-active-border-style fg=colour46
 
 # message text
-set-option -g message-bg colour8
-set-option -g message-fg colour7
+set-option -g message-style fg=colour7,bg=colour8
