Fix tmux for 3.0

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ bind C-a send-prefix
 set -sg escape-time 0
 set -sg repeat-time 600
 
-bind-key -T copy-mode C-\ send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key -T copy-mode C-\\ send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Less stretching to get to the first item.
 set -g base-index 1
